# ctef2py

./: API.rst  AUTHORS.rst  HISTORY.rst  README.rst  db.json  micc.json  pyproject.toml
ctef2py/: __init__.py
ctef2py/f90_fmohl/: CMakeLists.txt  fmohl.f90  fmohl.rst
ctef2py/f90_getgauss/: CMakeLists.txt  getgauss.f90  getgauss.rst
docs/: Makefile  conf.py  index.rst  installation.rst
tests/: __init__.py  test_ctef2py.py  test_f90_fmohl.py  test_f90_getgauss.py
