[tool.poetry]
name = "ctef2py"
version = "0.1.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Tom Mertens <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/tomerten/ctef2py"
homepage = "https://github.com/tomerten/ctef2py"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.4"
et-micc-build = "^1.1.8"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"
black = "^21.4b2"
isort = "^5.8.0"
pylint = "^2.8.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
